--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+#players {
+    display: flex;
+    justify-content: space-around;
+    width: 900px;
+}
 #boardTTT {
     width: 900px;
     height: 900px;
