--- a/styles.css
+++ b/styles.css
@@ -11,13 +11,30 @@
     flex-wrap: wrap;
 }
 .tttCard {
-    width: 300px;
+    width: 298px;
+    border: 1px solid black;
+    height: 298px;
 }
 
 .tttX {
     background-color: blue;
 }
-
 .tttO {
     background-color: red;
+}
+#gameOver {
+    position: absolute;
+    width: 450px;
+    left: 225px;
+    top: 200px;
+    border: 2px solid black;
+    background-color: aliceblue;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#tttButtonBox {
+    display: flex;
+    justify-content: space-around;
 }
